--- a/assets/projects/hcp.html
+++ b/assets/projects/hcp.html
@@ -42,10 +42,9 @@ Pooling (HCP), where an arbitrary number of object segment hypotheses are taken 
 
 		<h4>Downloads</h4>
 
-             		Coming Soon...
+             		Code (Coming Soon...)
 			<br>
-			<p>Download <a href="url"> <b> website</b></a>.</p>
-
+			<p>Models can be downloaded from <a href="https://drive.google.com/file/d/0B5AHi8MAbKMLWG9jWDJTeHpyYW8/"> <b>here</b></a>.</p>
 
 </div>
 </body>
