--- a/assets/projects/rr.html
+++ b/assets/projects/rr.html
@@ -34,7 +34,7 @@
 
   <div class="media-body">
     <p class="media-heading">
-      <strong>Netscope</strong><br /><a href="http://ethereon.github.io/netscope/quickstart.html">[LINK]</a>
+      <strong>Netscope</strong><a href="http://ethereon.github.io/netscope/quickstart.html">[LINK]</a><br />
       <strong>Intro: </strong>A web-based tool for visualizing neural network architectures. It currently supports Caffe's prototxt format.
     </p>
   </div>
