--- a/assets/projects/rr.html
+++ b/assets/projects/rr.html
@@ -38,6 +38,19 @@
       <strong>Intro: </strong>A web-based tool for visualizing neural network architectures. It currently supports Caffe's prototxt format.
     </p>
   </div>
+
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Arxiv Sanity Preserver</strong><a href="http://www.arxiv-sanity.com/">[LINK]</a><br />
+      <strong>Intro: </strong>This project is a web interface that
+      attempts to tame the overwhelming flood of papers on Arxiv. It
+      allows researchers to keep track of recent papers, search for
+      papers, sort papers by similarity to any paper, see recent
+      popular papers, to add papers to a personal library, and to get
+      personalized recommendations of (new or old) Arxiv papers.
+    </p>
+  </div>
+
 </div>
 
 
