--- a/assets/projects/stc.html
+++ b/assets/projects/stc.html
@@ -41,10 +41,10 @@
 
 		<h4>Downloads</h4>
 
-			Coming Soon...
 			<br>
-			<p>Download <a href="url"> <b> website</b></a>.</p>
-
+			<p>Images of Flickr-Clean can be downloaded from <a href="https://drive.google.com/open?id=0B5AHi8MAbKMLQWRVdnRxbzl0RmM"> <b>here</b></a>.</p>
+			<br>
+			<p>Saliency maps of Flickr-Clean can be downloaded from <a href="https://drive.google.com/open?id=0B5AHi8MAbKMLR1IzeDZkUW5LVUE"> <b>here</b></a>.</p>
 
 
 </div>
