--- a/index.html
+++ b/index.html
@@ -192,47 +192,14 @@
                 <ul class="tl">
                     <li class="tl-item" ng-repeat="item in retailer_history">
 
-                        <div class="item-title">[ 19th March 2020 3:00 PM ]</div>
-                        <div class="item-detail">I was awarded as one of the five top early-career researchers in
-                            Engineering and Computer Sciences in Australia by <a
-                                    href="https://specialreports.theaustralian.com.au/1540291/27">The Australian</a>.
+                        <div class="item-title">[ PAPER ]</div>
+                        <div class="item-detail"> Our research works on video object segmentation (<a href="https://arxiv.org/abs/2106.02638">AOT</a>) and few-shot segmentation (<a href="https://arxiv.org/abs/2106.02320">CyCTR</a>) are accepted by NeurIPS 2021. Congrats Zongxin and Gengwei!
                         </div>
                     </li>
                     <li class="tl-item" ng-repeat="item in retailer_history">
 
-                        <div class="item-title">[ 19th March 2020 3:00 PM ]</div>
-                        <div class="item-detail">The slides of <a href="assets/pdf/Wiztalk-魏云超-20200728.pptx">Data-Efficient
-                            Image and Video Segmentation</a> at Tencent Wiztalk is avaliable now!
-                        </div>
-                    </li>
-                    <li class="tl-item" ng-repeat="item in retailer_history">
-
-                        <div class="item-title">[ 19th March 2020 3:00 PM ]</div>
-                        <div class="item-detail">We release <strong>University-1652</strong>, a multi-view multi-source
-                            benchmark for drone-based geo-localization <a
-                                    href="https://github.com/layumi/University1652-Baseline">[link]</a>.
-                        </div>
-                        <div class="item-title2">[ 19th March 2020 3:00 PM ]</div>
-                        <div class="item-detail">We release <strong>University-1652</strong>, a multi-view multi-source
-                            benchmark for drone-based geo-localization <a
-                                    href="https://github.com/layumi/University1652-Baseline">[link]</a>.
-                        </div>
-                    </li>
-                    <li class="tl-item" ng-repeat="item in retailer_history">
-
-                        <div class="item-title">[ 19th March 2020 3:00 PM ]</div>
-                        <div class="item-detail">We release <strong>Agriculture-Vision</strong>, the first large-scale
-                            aerial farmland image dataset for semantic segmentation of agricultural patterns <a
-                                    href="https://www.agriculture-vision.com/dataset">[link]</a>.
-                        </div>
-                    </li>
-
-                    <li class="tl-item" ng-repeat="item in retailer_history">
-
-                        <div class="item-title">[ 19th March 3:00 PM ]</div>
-                        <div class="item-detail">We organized the Real-world Recognition from Low-quality Inputs and 1st
-                            Tiny Object Detection Challenge workshop in ECCV 2020 <a href="https://rlq-tod.github.io/">[link]</a>
-                            <a href="https://www.youtube.com/playlist?list=PLPtQK8rJZ9HzU0ao9-Zdy-vmCc_Rw-9U8">[Youtube]</a>.
+                        <div class="item-title">[ TEAM ]</div>
+                        <div class="item-detail"> I joined Beijing Jiaotong University as a full professor on Aug 2021!
                         </div>
                     </li>
                 </ul>
