--- a/people.html
+++ b/people.html
@@ -3,6 +3,7 @@
 <head>
     <title>Yunchao Wei's homepage</title>
     <!-- Custom Theme files -->
+    <link rel="icon" href="./images/BJTU_LOGO3.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="keywords" content=""/>
