update member email, seminar date

--- a/people.html
+++ b/people.html
@@ -77,8 +77,9 @@
             <div class="col-md-3 team-grids">
                 <div class="team-img">
                     <img class="student-img" src="images/people/zhufeng.jpg" alt="">
-                    <h4>Fengzhu</h4>
-                    <p>(2021, co-supervised stu @ UTS)</p>
+                    <h4>Feng Zhu</h4>
+                    <p>zfonemore AT foxmail.com <br>
+                    (2021, co-supervised stu @ UTS)</p>
                 </div>
             </div>
             
@@ -86,7 +87,8 @@
                 <div class="team-img">
                     <img class="student-img" src="images/people/yanda.jpg" alt="">
                     <h4>Yanda Li</h4>
-                    <p>(2021, co-supervised stu @ UTS)</p>
+                    <p>yanda95 AT foxmail.com <br>
+                    (2021, co-supervised stu @ UTS)</p>
                 </div>
             </div>
 
@@ -94,7 +96,8 @@
                 <div class="team-img">
                     <img class="student-img" src="images/people/gengwei.jpg" alt="">
                     <h4>Gengwei Zhang</h4>
-                    <p>(2021, co-supervised stu @ UTS)</p>
+                    <p>zgwdavid AT gmail.com <br>
+                    (2021, co-supervised stu @ UTS)</p>
                 </div>
             </div>
 
@@ -102,7 +105,8 @@
                 <div class="team-img">
                     <img class="student-img" src="images/people/shiyin.jpg" alt="">
                     <h4>Shiyin Zhang</h4>
-                    <p>(2017, co-supervised stu)</p>
+                    <p>shiyinzhang AT bjtu.edu.cn <br>
+                    (2017, co-supervised stu)</p>
                 </div>
             </div>
         </div>
@@ -113,7 +117,8 @@
                 <div class="team-img">
                     <img class="student-img" src="images/people/kunyang.png" alt="">
                     <h4>Kunyang Han</h4>
-                    <p>(2022, co-supervised stu)</p>
+                    <p>kunyanghan AT bjtu.edu.cn <br>
+                    (2022, co-supervised stu)</p>
                 </div>
             </div>
 
@@ -121,7 +126,8 @@
                 <div class="team-img">
                     <img class="student-img" src="images/people/fangyan.png" alt="">
                     <h4>Yan Fang</h4>
-                    <p>(2022)</p>
+                    <p>yfang0819 AT outlook.com <br>
+                    (2022)</p>
                 </div>
             </div>
 
@@ -129,7 +135,8 @@
                 <div class="team-img">
                     <img class="student-img" src="images/people/zhongwei2.jpg" alt="">
                     <h4>Zhongwei Ren</h4>
-                    <p>(2022)</p>
+                    <p>18281272 AT bjtu.edu.cn <br>
+                    (2022)</p>
                 </div>
             </div>
         </div>
@@ -151,7 +158,8 @@
                 <div class="team-img">
                     <img class="student-img" src="images/people/mengxue.jpeg" alt="">
                     <h4>Mengxue Qu</h4>
-                    <p>(2020, co-supervised stu)</p>
+                    <p>qumengxue AT bjtu.edu.cn <br>
+                    (2020, co-supervised stu)</p>
                 </div>
             </div>
 
@@ -159,7 +167,8 @@
                 <div class="team-img">
                     <img class="student-img" src="images/people/siyu.jpeg" alt="">
                     <h4>Siyu Jiao</h4>
-                    <p>(2021, co-supervised stu)</p>
+                    <p>21120325 AT bjtu.edu.cn <br>
+                    (2021, co-supervised stu)</p>
                 </div>
             </div>
 
@@ -167,7 +176,8 @@
                 <div class="team-img">
                     <img class="student-img" src="images/people/qiqi.jpeg" alt="">
                     <h4>Qiqi Gong</h4>
-                    <p>(2021, co-supervised stu)</p>
+                    <p>gongqq AT bjtu.edu.cn <br>
+                    (2021, co-supervised stu)</p>
                 </div>
             </div>
 
@@ -175,7 +185,8 @@
                 <div class="team-img">
                     <img class="student-img" src="images/people/zilin.jpeg" alt="">
                     <h4>Zilin Wang</h4>
-                    <p>(2021, co-supervised stu)</p>
+                    <p>21120306 AT bjtu.edu.cn <br>
+                    (2021, co-supervised stu)</p>
                 </div>
             </div>
         </div>      
@@ -185,14 +196,16 @@
                 <div class="team-img">
                     <img class="student-img" src="images/people/yihan.jpeg" alt="">
                     <h4>Yihan Hu</h4>
-                    <p>(2022)</p>
+                    <p>18281128hyh AT gmail.com <br>
+                    (2022)</p>
                 </div>
             </div>
             <div class="col-md-3 team-grids">
                 <div class="team-img">
                     <img class="student-img" src="images/people/haojie.jpeg" alt="">
                     <h4>Haojie Ding</h4>
-                    <p>(2022)</p>
+                    <p>18231521 AT bjtu.edu.cn <br>
+                    (2022)</p>
                 </div>
             </div>
         </div>
