--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
                     <strong>Office:</strong> 1013-B08, Science & Technology Innovation Mansion of BJTU, Beijing 100044<br/>
                     <strong>Email</strong>: yunchao.wei AT bjtu.edu.cn | wychao1987 AT gmail.com<br/>
-                    <strong>Prospective Students</strong> : <a href="opening.html">Content me</a>. <br>
+                    <strong>Prospective Students</strong> : <a href="opening.html">Contact me</a>. <br>
                     
                     <a href="https://scholar.google.com.sg/citations?user=qL9Csv0AAAAJ&hl=en" target="_blank"><i
                         class="fa fa-globe"></i> 
