--- a/publication.html
+++ b/publication.html
@@ -99,35 +99,40 @@
                     Online Attention Accumulation for Weakly Supervised Semantic Segmentation.
                 </strong> <br>
                 Peng-Tao Jiang, Ling-Hao Han, Qibin Hou, Ming-Ming Cheng, <strong>Yunchao Wei</strong>. <br>
-                IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2021 <br>
+                IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2021 
+                <a href="https://github.com/PengtaoJiang/OAA">[CODE]</a><br>
             </li>
             <li>
                 <strong>
                     Collaborative Video Object Segmentation by Multi-Scale Foreground-Background Integration.
                 </strong> <br>
                 Zongxin Yang, <strong>Yunchao Wei</strong>, Yi Yang.  <br>
-                IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2021 <br>
+                IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2021 
+                <a href="https://github.com/z-x-yang/CFBI">[CODE]</a><br>
             </li>
             <li>
                 <strong>
                     Affinity Attention Graph Neural Network forWeakly Supervised Semantic Segmentation. 
                 </strong> <br>
                 Bingfeng Zhang, Jimin Xiao, Jianbo Jiao, <strong>Yunchao Wei</strong>, Yao Zhao.  <br>
-                IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2021 <br>
+                IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2021
+                <a href="https://github.com/zbf1991/A2GNN">[CODE]</a><br>
             </li>
             <li>
                 <strong>
                     Cross-Modal Progressive Comprehension for Referring Segmentation. 
                 </strong><br>
                 Si Liu, Tianrui Hui, Shaofei Huang, <strong>Yunchao Wei</strong>, Bo Li, Guanbin Li.  <br>
-                IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2021 <br>
+                IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2021
+                <a href="https://github.com/spyflying/CMPC-Refseg">[CODE]</a><br>
             </li>
             <li>
                 <strong>
                     AlignSeg: Feature-Aligned Segmentation Networks. 
                 </strong> <br>
                 Zilong Huang, <strong>Yunchao Wei</strong>, Xinggang Wang, Honghui Shi, Wenyu Liu, Thomas S. Huang.  <br>
-                IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2021 <br>
+                IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2021 
+                <a href="https://github.com/speedinghzl/AlignSeg">[CODE]</a><br>
             </li>
             <!-- <li>
                 <strong>
@@ -149,14 +154,16 @@
                     Contrastive Adaptation Network for Single- and Multi-Source Domain Adaptation. 
                 </strong> <br>
                 Guoliang Kang, Lu Jiang, <strong>Yunchao Wei</strong>, Yi Yang, Alexander G. Hauptmann.  <br>
-                IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2020 <br>
+                IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2020
+                <a href="https://github.com/kgl-prml/Contrastive-Adaptation-Network-for-Unsupervised-Domain-Adaptation">[CODE]</a><br>
             </li>
             <li>
                 <strong>
                     CCNet: Criss-Cross Attention for Semantic Segmentation. 
                 </strong> <br>
                 Zilong Huang, Xinggang Wang, <strong>Yunchao Wei</strong>, Lichao Huang, Humphrey Shi, Wenyu Liu, Thomas S. Huang.  <br>
-                IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2020 <br>
+                IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2020
+                <a href="https://github.com/speedinghzl/CCNet">[CODE]</a><br>
             </li>
             <li>
                 <strong>
@@ -196,21 +203,25 @@
                     Few-Shot Segmentation via Cycle-Consistent Transformer. 
                 </strong> <br>
                     Gengwei Zhang, Guoliang Kang, Yi Yang, <strong>Yunchao Wei</strong>.  <br>
-                    Neural Information Processing Systems (<strong>NeurIPS</strong>), 2021 <br>
+                    Neural Information Processing Systems (<strong>NeurIPS</strong>), 2021 
+                    <a href="https://github.com/YanFangCS/CyCTR-Pytorch">[CODE]</a><br>
             </li>
             <li>
                 <strong>
                     Associating Objects with Transformers for Video Object Segmentation. 
                 </strong> <br>
                     Zongxin Yang, <strong>Yunchao Wei</strong>, Yi Yang.  <br>
-                    Neural Information Processing Systems (<strong>NeurIPS</strong>), 2021 <br>
+                    Neural Information Processing Systems (<strong>NeurIPS</strong>), 2021
+                    <a href="https://github.com/yoxu515/aot-benchmark">[CODE]</a><br>
+                
             </li>
             <li>
                 <strong>
                     AINet: Association Implantation for Superpixel Segmentation. 
                 </strong> <br>
                     Yaxiong Wang, <strong>Yunchao Wei</strong>, Xueming Qian, Li Zhu, Yi Yang.  <br>
-                    International Conference on Computer Vision (<strong>ICCV</strong>), 2021 <br>
+                    International Conference on Computer Vision (<strong>ICCV</strong>), 2021
+                     <a href="https://github.com/YanFangCS/AINET">[CODE]</a><br>
             </li>
             <li>
                 <strong>
@@ -224,21 +235,24 @@
                     Product1M: Towards Weakly Supervised Instance-Level Product Retrieval via Cross-modal Pretraining. 
                 </strong> <br>
                     Xunlin Zhan, Yangxin Wu, Xiao Dong, <strong>Yunchao Wei</strong>, Minlong Lu, Yichi Zhang, Hang Xu, Xiaodan Liang.  <br>
-                    International Conference on Computer Vision (<strong>ICCV</strong>), 2021 <br>
+                    International Conference on Computer Vision (<strong>ICCV</strong>), 2021
+                    <a href="https://github.com/zhanxlin/Product1M">[CODE]</a><br>
             </li>
             <li>
                 <strong>
                     VSPW: A Large-scale Dataset for Video Scene Parsing in the Wild. 
                 </strong> <br>
                     Jiaxu Miao, <strong>Yunchao Wei</strong>, Yu Wu, Chen Liang, Guangrui Li, Yi Yang.  <br>
-                    IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2021 <br>
+                    IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2021 
+                    <a href="https://www.vspwdataset.com/">[CODE]</a><br>
             </li>
             <li>
                 <strong>
                     Domain Consensus Clustering for Universal Domain Adaptation. 
                 </strong> <br>
                     Guangrui Li, Guoliang Kang, Yi Zhu, <strong>Yunchao Wei</strong>, Yi Yang.  <br>
-                    IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2021 <br>
+                    IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2021
+                    <a href="https://github.com/Solacex/Domain-Consensus-Clustering/">[CODE]</a><br>
             </li>
         </ol>
         <br>
@@ -251,7 +265,8 @@
                     Segmentation</strong><br/>
                 Guoliang Kang, <strong>Yunchao Wei</strong>, Yi Yang, Yueting Zhuang, Alexander G. Hauptmann<br/>
                 Neural Information Processing Systems (<strong>NeurIPS</strong>), 2020 (<span
-                    style="color:#CB4335;"><strong>oral</strong></span>)<br/>
+                    style="color:#CB4335;"><strong>oral</strong></span>)
+                <a href="https://github.com/kgl-prml/Pixel-Level-Cycle-Association/">[CODE]</a><br>
             </li>
 
             <li>
