--- a/seminar.html
+++ b/seminar.html
@@ -115,12 +115,6 @@
                             <td>Paper Sharing (TBA)</td>
                         </tr> -->
                         <tr>
-                            <td>Jan. 9</td>
-                            <td>Zhongwei Ren <br>Yan Fang</td>
-                            <td>BJTU</td>
-                            <td>Paper Sharing (TBA)</td>
-                        </tr>
-                        <tr>
                             <td>Jan. 16</td>
                             <td>Shiyin Zhang <br>Mengxue Qu</td>
                             <td>BJTU</td>
@@ -142,7 +136,7 @@
                 </table>
             </div>
 
-            <!-- <h4 class="title">Finished Presentations, 2022</h4>
+            <h4 class="title">Finished Presentations, 2022</h4>
             <div class="contents">
                 <table class="table">
                     <thead>
@@ -154,19 +148,19 @@
                     </tr>
                     </thead>
                     <tbody> 
-                        [<a href="">pdf</a>]
+                        <!-- [<a href="">pdf</a>] -->
                         <tr>
-                            <td>Jan. 02</td>
-                            <td>Zhongwei Ren <br>Yan Fang</td>
+                            <td>Jan. 9</td>
+                            <td>Zhongwei Ren </td>
                             <td>BJTU</td>
                             <td>
-                                [<a href="">pdf</a>] <br>
-                                [<a href="">pdf</a>]
+                                Weekly Supervised Instance Segmentation for Videos with Temporal Mask Consistency
+                                [<a href="./seminar/weakly_supervised_instance_segmentation_for_videos_with_temporal_mask_consistency_zhongwei.pdf">pdf</a>]
                             </td>
                         </tr>
                     </tbody>
                 </table>
-            </div> -->
+            </div>
 
             <h4 class="title">Finished Presentations, 2021</h4>
             <div class="contents">
