--- a/opening.html
+++ b/opening.html
@@ -81,9 +81,9 @@
             <div class="contents">
                 <p>
                     Our goal is to make the computer better perceive the real world like humans using computer vision and machine learning techniques.
-                    For <b>computer vision</b>, we are interested in developing accurate and efficient solutions for the basic recognition tasks, e.g., image classification, image/video object detection, pixel-level understanding (e.g., semantic segmentation, instance segmentation, class-agnostic segmentation, matting) for images/videos.
+                    For <b>computer vision</b>, we are interested in developing accurate and efficient solutions for the basic recognition tasks, e.g., classification, object detection, pixel-level understanding (e.g., semantic segmentation, instance segmentation, class-agnostic segmentation, matting) for images/videos.
                     For <b>machine learning</b>, we are interested in developing data-efficient algorithms for training models with imperfect or incomplete data, including unsupervised learning, weakly supervised learning, semi-supervised learning, few-shot learning, domain adaptive learning, active learning etc. 
-                    Recently, we are growingly interested in applying multi-modality pre-training techniques for tackling vision & language problems, e.g., cross-media retrieval, referring recognition, etc.
+                    Recently, we are growingly interested in applying multi-modality pre-training techniques for tackling vision & language problems, e.g., cross-media retrieval, referring recognition, open-world recognition, etc.
                 </p>
             </div>
 
