member add undergraduates

--- a/people.html
+++ b/people.html
@@ -214,19 +214,31 @@
 
     </div>
 
-    <!-- <h4 class="title">Undergraduate Students</h4>
-    <div class="team-row">
+    <h4 class="title">Undergraduate Students</h4>
+    <div class="contents" style="font-size: 16px;">
+        <ul id="interests">
+            <li>
+                <span class="name">Jialong Sun</span> , jialong.sun AT bjtu.edu.cn, Jan 2022 - present
+            </li>
+            <li>
+                <span class="name">Wenxin Chen</span>, wenxin.chen AT bjtu.edu.cn, Jan 2022 - present
+            </li>
+            <li>
+                <span class="name">Chao Ma</span>, chao.ma AT bjtu.edu.cn, Jan 2022 - present
+            </li>
+            <li>
+                <span class="name">Chengqing Bu</span>, chengqing.bu AT bjtu.edu.cn, Jan 2022 - present
+            </li>
+            <li>
+                <span class="name">Yuyao Huang</span>, yuyao.huang AT bjtu.edu.cn, Jan 2022 - present
+            </li>
+            <li>
+                <span class="name">Kaiyuan Zhang</span>, kaiyuan.zhang AT bjtu.edu.cn, Jan 2022 - present
+            </li>
+        </ul>
+    </div>
 
-        <div class="col-md-3 team-grids">
-            <div class="team-img">
-                <img class="student-img" src="images/people/wyc.jpg" alt="">
-                <h4>Edwards Doe</h4>
-                <p>(2017)</p>
-            </div>
-        </div>
-        <div class="clearfix"></div>
-    </div> -->
-
+    <h4 class="title"></h4>
 </div>
 
 <!--footer-->
