Regular seminar update

--- a/seminar.html
+++ b/seminar.html
@@ -115,12 +115,6 @@
                             <td>Paper Sharing (TBA)</td>
                         </tr> -->
                         <tr>
-                            <td>Jan. 16</td>
-                            <td>Shiyin Zhang <br>Mengxue Qu</td>
-                            <td>BJTU</td>
-                            <td>Paper Sharing (TBA)</td>
-                        </tr>
-                        <tr>
                             <td>Jan. 23</td>
                             <td>Haojie Ding <br>Yihan Hu</td>
                             <td>BJTU</td>
@@ -149,6 +143,26 @@
                     </thead>
                     <tbody> 
                         <!-- [<a href="">pdf</a>] -->
+                        <tr>
+                            <td>Jan. 23</td>
+                            <td>Shiyin Zhang <br>Mengxue Qu</td>
+                            <td>BJTU</td>
+                            <td>
+                                Pyramid Fusion Transformer for Semantic Segmentation
+                                [<a href="./seminar/PFT_shiyin.pdf">pdf</a>] <br>
+                                Language-Driven Semantic Segmentation
+                                [<a href="./seminar/LSeg_Mengxue.pdf">pdf</a>] <br>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Jan. 16</td>
+                            <td>Tianlong Chen</td>
+                            <td>UT Austin</td>
+                            <td>
+                                How to be a qualified PhD?
+                                [<a href="./seminar/How_to_be_a_qualified_PhD_tianlong.pdf">pdf</a>]
+                            </td>
+                        </tr>
                         <tr>
                             <td>Jan. 9</td>
                             <td>Zhongwei Ren </td>
