--- a/index.html
+++ b/index.html
@@ -195,6 +195,13 @@
                 <ul class="tl">
                     <li class="tl-item" ng-repeat="item in retailer_history">
 
+                        <div class="item-title">[ AWARD ]</div>
+                        <div class="item-detail"> I was selected as MIT TR35 - MIT Technology Review, 35 Innovators Under 35（China)
+
+                        </div>
+                    </li>
+                    <li class="tl-item" ng-repeat="item in retailer_history">
+
                         <div class="item-title">[ PAPER ]</div>
                         <div class="item-detail"> Our work on video object segmentation (<a href="https://arxiv.org/abs/2106.02638">AOT</a>) and few-shot segmentation (<a href="https://arxiv.org/abs/2106.02320">CyCTR</a>) are accepted by NeurIPS 2021. Congrats Zongxin and Gengwei!
                         </div>
@@ -218,6 +225,9 @@
             <div class="center-row" style="font-size: 16px;">
 
                 <ul id="interests">
+                    <li>
+                        MIT TR35 China by MIT Technology Review (2021)
+                    </li>
                     <li>
                         The 1st place of the video object segmentation track in CVPR Youtube VOS Challenge (2021)
                     </li>
