--- a/opening.html
+++ b/opening.html
@@ -109,7 +109,7 @@
                     <a href="https://ifp-uiuc.github.io/">IFP group</a> at UIUC from 2017 to 2019, working with 
                     Prof. <a href="https://en.wikipedia.org/wiki/Thomas_Huang">Thomas S. Huang</a>, and a Postdoctoral Researcher of National University of Singapore from 2016 to 2017, 
                     working with Prof. <a href="https://sites.google.com/site/jshfeng/home">Jiashi Feng</a> and Prof. <a href="https://yanshuicheng.ai/">Shuicheng Yan</a>. He received his Ph.D. degree from Beijing Jiaotong University 
-                    in 2016, advised by Prof. <a href="http://mepro.bjtu.edu.cn/zhaoyao/index.htm">Yao Zhao</a>. He was named as one of the five top early-career researchers in 
+                    in 2016, advised by Prof. <a href="http://mepro.bjtu.edu.cn/zhaoyao/index.htm">Yao Zhao</a>. He was selected as MIT TR35 China by MIT Technology Review in 2021 and was named as one of the five top early-career researchers in 
                     Engineering and Computer Sciences in Australia by The Australian in 2020. He received the Discovery Early 
                     Career Researcher Award of the Australian Research Council in 2019, the 1st Prize in Science and Technology 
                     awarded by China Society of Image and Graphics (CSIG) in 2019. He has published more than 80 papers in top-tier 
