--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <li class="tl-item" ng-repeat="item in retailer_history">
 
                         <div class="item-title">[ AWARD ]</div>
-                        <div class="item-detail"> I was selected as MIT TR35 - MIT Technology Review, 35 Innovators Under 35（China)
+                        <div class="item-detail"> I was selected as MIT TR35 - MIT Technology Review, 35 Innovators Under 35, China
 
                         </div>
                     </li>
