regular seminar update

--- a/seminar.html
+++ b/seminar.html
@@ -115,15 +115,39 @@
                             <td>Paper Sharing (TBA)</td>
                         </tr> -->
                         <tr>
-                            <td>Feb. 13</td>
-                            <td>Haojie Ding <br>Yihan Hu</td>
+                            <td>Mar. 13</td>
+                            <td>Siyu Jiao <br> Haojie Ding</td>
                             <td>BJTU</td>
                             <td>Paper Sharing (TBA)</td>
                         </tr>
                         <tr>
-                            <td>Feb. 20</td>
-                            <td>Siyu Jiao <br>Kunyang Han</td>
+                            <td>Mar. 20</td>
+                            <td>Zilin Wang <br> Kunyang Han</td>
                             <td>BJTU</td>
+                            <td>Paper Sharing (TBA)</td>
+                        </tr>
+                        <tr>
+                            <td>Mar. 27</td>
+                            <td>Yihan Hu <br> Mengxue Qu</td>
+                            <td>BJTU</td>
+                            <td>Paper Sharing (TBA)</td>
+                        </tr>
+                        <tr>
+                            <td>Apr. 3</td>
+                            <td>Shiyin Zhang <br> Qiqi Gong</td>
+                            <td>BJTU</td>
+                            <td>Paper Sharing (TBA)</td>
+                        </tr>
+                        <tr>
+                            <td>Apr. 10</td>
+                            <td>Yan Fang <br> Zhongwei Ren</td>
+                            <td>BJTU</td>
+                            <td>Paper Sharing (TBA)</td>
+                        </tr>
+                        <tr>
+                            <td>Apr. 17</td>
+                            <td>Zhiyuan Fang <br> Zekang Zhang</td>
+                            <td>BIT</td>
                             <td>Paper Sharing (TBA)</td>
                         </tr>
                     </tbody>
@@ -143,6 +167,28 @@
                     </thead>
                     <tbody> 
                         <!-- [<a href="">pdf</a>] -->
+
+                        <tr>
+                            <td>Feb. 20</td>
+                            <td>Siyu Jiao <br>Kunyang Han</td>
+                            <td>BJTU</td>
+                            <td>
+                                Few-Shot Segmentation via Cycle-Consistent Transformer
+                                [<a href="./seminar/Few-Shot_Segmentation_via_Cycle-ConsistentTransformer_siyu.pdf">pdf</a>] <br>
+                                Open-Vocabulary Image Segmentation
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Feb. 13</td>
+                            <td>Haojie Ding <br>Yihan Hu</td>
+                            <td>BJTU</td>
+                            <td>
+                                K-Net: Towards Unified Image Segmentation
+                                [<a href="./seminar/2.13paper_reading_haojie.pdf">pdf</a>] <br>
+                                Vision Transformer with Deformable Attention
+                                [<a href="./seminar/DAT_yihan.pdf">pdf</a>]
+                            </td>
+                        </tr>
                         <tr>
                             <td>Jan. 23</td>
                             <td>Shiyin Zhang <br>Mengxue Qu</td>
